--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -361,7 +361,37 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 Отсюда и находят прямые контура. Аналогичным образом можно применять преобразование Хафа к любой функции вида $g(v,c) = 0$, где $v$~--- это вектор координат, а $c$~--- вектор коэффициентов.
 
 \subsubsection{Интегро-дифференциальный оператор (IDO)}
+
+Оператор, предложенный в \cite{Daugman2, Daugman4, Daugman, Daugman3}, используется в первую очередь для детектирования объектов круглой формы: в оригинале зрачка и радужки. Но также его автором было предложено детектировать верхние и нижние веки путем настройки поиска контура с кругового на дугообразный.
+
+Интегро-дифференциальный оператор определяестя как:
+\begin{gather}\label{norm}
+	\max_{r, x_0, y_0}{\left| G_\sigma(r)*\left(\frac{\delta}{\delta r}\right)\int_{r, x_0, y_0}{\frac{I(x,y)}{2\pi r}ds}\right|}
+\end{gather}
+
+При непрерывном применении оператора на изображении мы максимизируем исследуемый функционал по трем параметрам $(x_0, y_0)$~--- координаты центра и радиус $r$. Ожидается, что границы зрачка и радужки будут максимизировать производную интеграла по круговым границам, так как на них значения интерсивности резко меняются. $G_\sigma(r)$~--- сглаживающая функция. Для век алгоритм аналогичный, только форма исследуемых траекторий будет иметь другой вид. Существенная проблема для данного метода~--- излишняя зашумленность изображения, которая может породить внезапные перепады у интегрируемого функционала.
+
+
 \subsubsection{Оператор Кэнни}
+
+Детектор контуров, предложенный в \cite{Canny}, составляет многоступенчатый алгоритм для обнаружения контуров различной формы и природы. Последовательность действий может быть описана таким образом:
+
+\begin{enumerate}
+	\item Применить гауссовский фильтр для сглаживания изображения и удаления шума;
+	\item Найти градиенты интенсивности изображения;
+	\item Подавить немаксимумы для корректного определения границ;
+	\item Применить пороговую фильтрацию для определения потенциальных контуров;
+	\item Выделение наиболее весомых контуров.
+\end{enumerate}
+
+\textbf{Фильтр Гаусса}
+
+Уравнение, задающее ядро Гауссовского фильтра размера $(2k+1)\times (2k+1)$:
+\begin{gather}\label{norm}
+	H_{ij}=\frac{1}{2\pi \sigma^2}\exp{\left(\ \frac {-(i-(k+1))^2+(j-(k+1))^2}{2\sigma^2}\right)};~~1\leq i, j \leq(2k+1)
+\end{gather}
+
+Очевидно, выбор ядра сглаживания влияет на производительность детектора. Чем больше размер фильтра, тем ниже чувствительность к шуму, но тем больше шансы потерять важную информацию.
 
 \newpage
 
@@ -369,7 +399,52 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 
 \subsubsection{Эллиптический контур века}
 
+Один из возможных способов приблизить линию века~--- описать ее с помощью эллиптической кривой. Эта модель основана на предположении, что глазное яблоко имеет сферическую форму:
+\begin{gather}\label{norm}
+	x^2+y^2+z^2= R^2
+\end{gather}
+
+Такое предположение приводит к модели, основанной на открытости глаза. Степень открытости~--- угловое положение века относительно центра сферы. Тогда кривую века можно получить как пересечение сферы глазного яблока с плоскостью проходящей через ось $x$ с углом $\varphi$ относительно оси $z$ (рис.~\ref{fig:glaz4}). Уравнение этой плоскости имеет вид:
+\begin{gather}\label{el1}
+	\tan{\varphi}= \frac{y}{z}
+\end{gather}
+
+А кривая пересечения, моделирующая веко, задается эллиптической кривой:
+\begin{gather}\label{el2}
+	x^2+\frac{y^2}{\sin{\varphi}^2}=R^2
+\end{gather}
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{glaz4.jpg}
+	
+	\caption{Вид сбоку и спереди эллиптического контура века}
+	
+	\label{fig:glaz4}
+	
+\end{figure}
+
+
 \subsubsection{Параболический контур века}
+
+На практике оказывается, что определять кривую века как пересечение прямой и сферы довольно грубо. Эмпирическим путем было установлено, что форма века глаза человека гораздо лучше аппроксимируется квадратичной параболой(рис.~\ref{fig:glaz5}). Тогда уравнение параметрической кривой, задающее контур века принимает вид:
+\begin{gather}\label{par1}
+	y = a(x-x_0)^2 + y_0
+\end{gather}
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.6\linewidth]{glaz5.jpg}
+	
+	\caption{Пример параболического контура века на изображении глаза}
+	
+	\label{fig:glaz5}
+	
+\end{figure}
 
 \newpage
 \subsection{Методы выделения века на изображении глаза}
