--- a/mylib.bib
+++ b/mylib.bib
@@ -9,6 +9,30 @@
   P. 21–30.},
 }
 
+@Article{Daugman2,
+	author  = {Daugman J.},
+	journal = {(U.S. Patent), 29160},
+	title   = {Biometric personal identification system based on iris analysis},
+	year    = {1994},
+	doi     = {},
+}
+
+@Article{Daugman3,
+	author  = {Daugman J.},
+	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+	title   = {High confidence visual recognition of persons by a test of statistical independence},
+	year    = {2013},
+	doi     = {1, 1148 - 1161},
+}
+
+@Article{Daugman4,
+	author  = {Daugman J.},
+	journal = {Pattern Recognition},
+	title   = {The importance of being random : statistical principles of iris recognition},
+	year    = {2003},
+	doi     = {36(2), 279 - 291},
+}
+
 @Article{Adam_1,
 	author  = {Adam M., Rossant F., Amiel F., Mikovikova B., Ea T.},
 	journal = {Advanced Concepts for Intelligent Vision Systems Conference Proceedings},
@@ -129,6 +153,14 @@
 	title   = {Future Challenges based on the Multiple Biometric Grand Challenge},
 	year    = {},
 	doi     = {},
+}
+
+@Article{Canny,
+	author  = {Canny J.},
+	journal = {IEEE TPAMI},
+	title   = {A computational approach to edge detection},
+	year    = {1986},
+	doi     = {V.8. N.6. P.679–698},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
