--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -292,6 +292,18 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 
 Маска этого градиентного оператора имеет вид, изображенный на рис.~\ref{fig:grad_mask_prev}.
 
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.4\linewidth]{grad_mask_prev.jpg}
+	
+	\caption{Маски оператора Превитта}
+	
+	\label{fig:grad_mask_prev}
+	
+\end{figure}
+
 \subsubsection{Оператор Собеля}
 
 Небольшое видоизменение формул ~\ref{grad_mask_prev} в виде использования весового коэффициента~$2$ для средних элементов, позволяет уменьшить эффект сглаживания для функции градиента:
@@ -310,7 +322,7 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 	
 	\includegraphics[width=0.4\linewidth]{grad_mask_sob.jpg}
 	
-	\caption{Маски оператора Превитта}
+	\caption{Маски оператора Собеля}
 	
 	\label{fig:grad_mask_sob}
 	
@@ -360,6 +372,40 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 Осуществив преобразование Хафа, далее предлагается разбить пространство параметров $\rho \Theta$ на так называемые ячейки накопления, как показано на рис.~\ref{fig:norm}-в. Затем для каждой точки $(x_k, y_k)$ исходной плоскости перебираем возможные значения для параметра $\Theta$ и находим соотвествующее ему значение $\rho = x_k\cos{\Theta}+y_k\sin{\Theta}$. Если выбор значения $\Theta_p$ приводит к решению $\rho_q$, то увеличиваем значение ячейки $A(p,q)$ на 1. После выполнения этого алгоритма значение $A(p,q)=Q$ означает, что на исходной плоскости находится $Q$ точек лежащих на прямой $\rho_p = x_k\cos{\Theta_q}+y_k\sin{\Theta_q}$.
 Отсюда и находят прямые контура. Аналогичным образом можно применять преобразование Хафа к любой функции вида $g(v,c) = 0$, где $v$~--- это вектор координат, а $c$~--- вектор коэффициентов.
 
+Так любое коническое сечение, в частности парабола, может быть задано уравнением в полярных координатах:
+\begin{gather}\label{conic}
+	\rho = \frac{de}{1\pm e\cos{\Theta}}~~~\text{или}
+	\\
+	\rho = \frac{de}{1\pm e\sin{\Theta}},~~~~~~~
+\end{gather}
+где $e$~--- эксцентриситет и $d$~--- кратчайшее расстояние между фокусом и директрисой. Для конических сечений эксцентриситет имеет разные значения в зависимости от формы кривой. Так для элипса он лежит в диапазоне: $0<e<1$, для гиперболы~--- $e>1$, а для параболы $e = 1$, ее далее и рассмотрим.
+
+Парабола может быть определена как геометрическое множество точек, равноудаленных от неподвижной точки, называемой фокусом и прямой, называемой директрисой(рис.~\ref{fig:hough_parab}). Эта парабола, описывается уравнением:
+\begin{gather}\label{parab_equ}
+	(y-y_0)^2 = 4a(x-x_0)
+\end{gather}
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.7\linewidth]{hough_parab.jpg}
+	
+	\caption{Парабола}
+	
+	\label{fig:hough_parab}
+	
+\end{figure}
+Дифференциальное уравнение относительно $x$ может быть получено как:
+\begin{gather}\label{parab_diff}
+	\frac{\text{d}y}{\text{d}x}=\sqrt{\frac{a}{x-x_0}} = \tan{\lambda}
+\end{gather}
+Это уранение касательной параболы. В работе [11] было выведено соотношение между углом наклона параболы и углом $\Theta$:
+\begin{gather}\label{angl}
+	\Theta = 2\lambda
+\end{gather}
+ 
+Из геометрических соображений получаем фокусную точку параболы
 \subsubsection{Интегро-дифференциальный оператор (IDO)}
 
 Оператор, предложенный в \cite{Daugman2, Daugman4, Daugman, Daugman3}, используется в первую очередь для детектирования объектов круглой формы: в оригинале зрачка и радужки. Но также его автором было предложено детектировать верхние и нижние веки путем настройки поиска контура с кругового на дугообразный.
@@ -489,13 +535,181 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 \newpage
 \section{Описание модели}
 
+ Предложенный в данной работе метод определения положения век основан на применении вертикального градиента с последующими параболическим преобразованим и преобразованием Радона(рис.~\ref{fig:map})).
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{map.jpg}
+	
+	\caption{Алгоритм детектирования века на изображении}
+	
+	\label{fig:map}
+	
+\end{figure}
 
+В качестве модели кривой, задающей линию века, выбрана параболическая. Как было описано выше, она позволяет довольно четко определить границу века и на практике оказывается выигрышной. Таким образом, основной задачей алгоритма становится определить 3 ключевых параметра: $a, x_0$~и~$y_0$ в~\ref{parab},~--- однозначно определяющих положение века.
+\begin{gather}\label{parab}
+	y = a(x-x_0)^2 + y_0
+\end{gather}
 
+\subsection{Этап предобработки изображения}
+
+В качестве входных данных для алгоритма, помимо самого изображения глаза, используются данные о положении зрачка, а именно координаты его центра и его радиус. Нужны эти данные исключительно для того, чтобы локализировать веко и ускорить обработку изображения. Так, высоту рамки области, в которой мы ищем веко, устанавливаем равной $4\cdot PupR$, где $PupR$~--- это радиус зрачка. А область поиска смещаем на $15\%$ от вертикальной координаты центра зрачка. Также оставляем отсутуп в $5\%$ от горизонтальной координаты центра зрачка слева и справа. Полученный результат локализации изображен на рис.~\ref{fig:glaz6}. Все коэффициенты подобраны опытным путем как наиболее репрезентативные.
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{glaz6.jpg}
+	
+	\caption{Сужение области поиска}
+	
+	\label{fig:glaz6}
+	
+\end{figure}
+
+Заметим, что линия века на фотографии чаще всего сопровождается резким перепадом яркости по вертикали. Соотвественно мы легко можем отследить линию века продифференцировав изображение по вертикальной компоненте(рис.~\ref{fig:glaz7}).
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{glaz7.jpg}
+	
+	\caption{Применение к изображению вертикального и горизонтального градиента с пороговой фильтрацией}
+	
+	\label{fig:glaz7}
+	
+\end{figure}
+
+Помимо непосредственного дифференцирования изображения, также применяем пороговую фильтрацию к модулю разницы значений яркостей в соседних пикселях:
+\begin{gather}\label{I_diff}
+	 I_d(x,y) = \begin{cases}
+	 	255, \text{если}~|I(x,y+1) - I(x,y)|> por
+	 	\\
+	 	0, \text{иначе}
+	 \end{cases}
+\end{gather}
+
+Величина порогового значения выбрана равной $por=10$ эмпирически.
+
+Заметим, что изображение получилось достаточно зашумленным. Для того, чтобы это исправить, воспользуемся линейной дискретной интерполяцией. Линейное сглаживание по трем точкам~\cite{Inter}~--- это операция усреднения с помощью интерполяционных многочленов, обеспецивающая возможность получения усредненного значения в точке по заданным соседним. Горизонтальное сглаживание задается формулами~\ref{I_glad}, где $X$~--- число пикселей в строке.
+\begin{gather}\label{I_glad}
+	I_a(x,y) = \begin{cases}
+		\frac{5I(0,y)+2I(1,y)-I(2,y)}{6},~\text{если}~x=0
+		\\
+		\frac{I(x-1,y)+I(x,y)+I(x+1,y)}{3},~\text{если}~1\leq x\leq X-1
+		\\
+			\frac{5I(X,y)+2I(X-1,y)-I(X-2,y)}{6},~\text{если}~x=X
+	\end{cases}
+\end{gather}
+
+Однако, так как мы работаем в бинаризованном пространстве, формула выше приобретает вид:
+\begin{gather}\label{I_glad_bin}
+	I_{a-bin}(x,y) = \begin{cases}
+		I_a, \text{если}~I_a = 255
+		\\
+		0, \text{иначе}
+	\end{cases}
+\end{gather}
+
+После наложения интерполяционного фильтра изображение приобретает вид рис.~\ref{fig:I_glad}.
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{I_glad.jpg}
+	
+	\caption{Применение к изображениям вертикального и горизонтального градиента горизонтальной и вертикальной интерполяции соотвественно}
+	
+	\label{fig:I_glad}
+	
+\end{figure}
+
+Заметим, что помимо линии века, очень большой вклад в изображение вертикального градиента все еще дают ресницы, однако, на изображении горизонтального градиента веко практически отсутвует, а ресницы все также хорошо видны. Воспользуемся этим моментом для уменьшения шума ресниц рис.~\ref{fig:diff}.
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{diff.jpg}
+	
+	\caption{Уменьшение шума ресниц}
+	
+	\label{fig:diff}
+	
+\end{figure}
+
+Последним этапом предобработки изображения является параболическое преобразование. Его можно представить таким образом:
+\begin{gather}\label{parab2}
+\begin{cases}
+		x' = x
+		\\
+		y' = y - ax^2
+	\end{cases},
+\end{gather}
+
+где параметр $a$ определяет это преобразование. Заметим, что если в исходном пространстве была задана кривая вида: $y = a(x-x_0) + y_0$, то в пространстве $(y', x')$ она примет вид: $y = -2ax_0\cdot x + (ax_0^2 + y_0) = b\cdot x + c$. Перебирая возможные коэффициенты, мы можем добиться того, чтобы веко приняло форму прямой в конечном пространстве. Пример удачного преобразования на рис.~\ref{fig:parab}.
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{parab.jpg}
+	
+	\caption{Параболическое преобразование изображения}
+	
+	\label{fig:parab}
+	
+\end{figure}
+
+Теперь необходимо найти прямую и определить её наклон для корректного определения коэффициентов $x_0$ и $y_0$ для века из уравнения выше.
+ 
 \newpage
-\section{Реализация алгоритма}
+\subsection{Преобразование Радона}
 
+Рассмотрим простейший случай преобразования Радона, а имеено случай двух переменных. Исходим из предположения, что $f(x,y)$ определена на всей плоскости и достаточно быстро убывает на бесконечности. Последнее условие необходимо для сходимости несобственных интегралов. Тогда преобразованием Радона $f(x,y)$ называется функция~\cite{Radon}:
+\begin{gather}\label{radon}
+	Rf(s, \alpha) = \int_{-\infty}^{\infty}{f(x(z),y(z))} = \int_{-\infty}^{\infty}{f(s\cos{\alpha}+z\sin{\alpha}, s\sin{\alpha}-z\cos{\alpha})dz}
+\end{gather}
+
+Геометрический смысл этого преобразования~--- это интеграл от функции вдоль прямой, перпендекулярной вектору $\vec{n}=(\cos{\alpha}, \sin{\alpha})$ и проходящей на расстоянии $s$ от начала координат вдоль этого вектора (рис.~\ref{fig:Radon_transform}).
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.5\linewidth]{Radon_transform.jpg}
+	
+	\caption{Параболическое преобразование изображения}
+	
+	\label{fig:Radon_transform}
+	
+\end{figure}
+
+Перейдем к дискретной интерпретации этого метода. Для того, чтобы применить такое преобразование к изображению, можно разделить его на два этапа: выполнить преобразование поворота и просуммировать построчно значения яркостей. Тогда изменение наклона может быть задано формулой:
+\begin{gather}\label{nakl}
+	\begin{cases}
+		x' = x
+		\\
+		y' = y - bx
+	\end{cases},
+\end{gather}
+
+Тогда, если прямая изначально имела вид $y=bx+c$, то после преобразования она примет вид $y = c$. Так как шум на изображении все равно присутсвует, далее нужно максимизировать просуммированное значение яркостей вдоль всех строк изображения. Полученный максимум ожидаем в положении последнего искомого коэффициента $c$. Пример преобразования наклона на рис.~\ref{fig:nakl}
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{nakl.jpg}
+	
+	\caption{Поворот изображения}
+	
+	\label{fig:nakl}
+	
+\end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -503,6 +717,18 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 \newpage
 \section{Результаты работы алгоритма}
 
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.6\linewidth]{compare.jpg}
+	
+	\caption{Сравнение результата с эталоном. Красная линия~--- эталон, зеленая~--- результат алгоритма}
+	
+	\label{fig:compare}
+	
+\end{figure}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
