--- a/mylib.bib
+++ b/mylib.bib
@@ -163,4 +163,20 @@
 	doi     = {V.8. N.6. P.679–698},
 }
 
+@Article{Inter,
+	author  = {Дьяконов В. П.},
+	journal = {М.: Наука},
+	title   = { Справочник по алгоритмам и программам на языке бейсик для персональных ЭВМ},
+	year    = {1987},
+	doi     = {С. 240. ББК 22.18 Д93 УДК 519.6(083)},
+}
+
+@Article{Radon,
+	author  = {Deans, Stanley R.},
+	journal = {New York: John Wiley and Sons},
+	title   = {The Radon Transform and Some of Its Applications.},
+	year    = {1983},
+	doi     = {},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
